<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacteristicFragment">

    <TextView
        android:id="@+id/Brawn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/BrawnString"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/BrawnValue"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Brawn" />

    <TextView
        android:id="@+id/Agility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/AgilityString"
        app:layout_constraintStart_toEndOf="@+id/Brawn"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AgilityValue"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/BrawnValue"
        app:layout_constraintTop_toBottomOf="@+id/Agility" />

    <TextView
        android:id="@+id/Intellect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/IntellectString"
        app:layout_constraintStart_toEndOf="@+id/Agility"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/IntellectValue"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/AgilityValue"
        app:layout_constraintTop_toBottomOf="@+id/Intellect" />

    <TextView
        android:id="@+id/Cunning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/CunningString"
        app:layout_constraintStart_toEndOf="@+id/Intellect"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CunningValue"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/IntellectValue"
        app:layout_constraintTop_toBottomOf="@+id/Cunning" />

    <TextView
        android:id="@+id/Willpower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/WillpowerString"
        app:layout_constraintStart_toEndOf="@+id/Cunning"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/WillpowerValue"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/CunningValue"
        app:layout_constraintTop_toBottomOf="@+id/Willpower" />

    <TextView
        android:id="@+id/Presence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/PresenceString"
        app:layout_constraintStart_toEndOf="@+id/Willpower"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InvalidId" />

    <EditText
        android:id="@+id/PresenceValue"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/WillpowerValue"
        app:layout_constraintTop_toBottomOf="@+id/Presence" />


</androidx.constraintlayout.widget.ConstraintLayout>